// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionList Container should render Cancel 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -70,21 +70,43 @@
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
-                 d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
+                 d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                />
              </svg>
              <span>
-               Bezahlt bis 
+               Gekündigt am 
                <time
-                 datetime="2032-01-01"
+                 datetime="2023-01-01T00:00:00.000Z"
                >
-                 01.01.2032 00:00
+                 01.01.2023 00:00
                </time>
              </span>
+           </li>
+           <li
+             class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
+           >
+             <svg
+               fill="currentColor"
+               height="1em"
+               stroke="currentColor"
+               stroke-width="0"
+               viewBox="0 0 24 24"
+               width="1em"
+               xmlns="http://www.w3.org/2000/svg"
+             >
+               <path
+                 d="M0 0h24v24H0z"
+                 fill="none"
+               />
+               <path
+                 d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
+               />
+             </svg>
+              Abo ist unbezahlt
            </li>
            <li
              class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
            >
              <svg
@@ -155,33 +177,9 @@
              >
                Details & Zahlungen
              </a>
            </li>
          </ul>
-         <div
-           class="css-1fn3y2c-SubscriptionListItemActions eere75z0"
-         >
-           <button
-             class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-q7xvqc-MuiButtonBase-root-MuiButton-root"
-             tabindex="0"
-             type="button"
-           >
-             Abo Kündigen
-             <span
-               class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
-             />
-           </button>
-           <button
-             class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
-             tabindex="0"
-             type="button"
-           >
-             Jetzt Verlängern
-             <span
-               class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
-             />
-           </button>
-         </div>
        </div>
      </div>
    </article>
  </DocumentFragment>"
`;

exports[`SubscriptionList Container should render CancelWithInvoiceList 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -70,21 +70,43 @@
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
-                 d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
+                 d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
                />
              </svg>
              <span>
-               Bezahlt bis 
+               Gekündigt am 
                <time
-                 datetime="2032-01-01"
+                 datetime="2023-01-01T00:00:00.000Z"
                >
-                 01.01.2032 00:00
+                 01.01.2023 00:00
                </time>
              </span>
+           </li>
+           <li
+             class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
+           >
+             <svg
+               fill="currentColor"
+               height="1em"
+               stroke="currentColor"
+               stroke-width="0"
+               viewBox="0 0 24 24"
+               width="1em"
+               xmlns="http://www.w3.org/2000/svg"
+             >
+               <path
+                 d="M0 0h24v24H0z"
+                 fill="none"
+               />
+               <path
+                 d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
+               />
+             </svg>
+              Abo ist unbezahlt
            </li>
            <li
              class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
            >
              <svg
@@ -155,34 +177,10 @@
              >
                Details & Zahlungen
              </a>
            </li>
          </ul>
-         <div
-           class="css-1fn3y2c-SubscriptionListItemActions eere75z0"
-         >
-           <button
-             class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-q7xvqc-MuiButtonBase-root-MuiButton-root"
-             tabindex="0"
-             type="button"
-           >
-             Abo Kündigen
-             <span
-               class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
-             />
-           </button>
-           <button
-             class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
-             tabindex="0"
-             type="button"
-           >
-             Jetzt Verlängern
-             <span
-               class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
-             />
-           </button>
-         </div>
        </div>
      </div>
    </article>
    <article
      class="css-1cqlm8-InvoiceListWrapper eae5n870"
@@ -194,11 +192,11 @@
          class="css-kkg48e-InvoiceListItemContent e7di52m3"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
-           Offene Rechnung für Foobar Memberplan
+           Stornierte Rechnung für Foobar Memberplan
          </h6>
          <ul
            class="css-579onz-InvoiceListItemMeta e7di52m2"
          >
            <li
@@ -298,23 +296,17 @@
                />
              </svg>
               Betrag von CHF 500.-
            </li>
          </ul>
-         <div
-           class="css-lst8rm-InvoiceListItemActions e7di52m0"
+         <strong>
+           Storniert am 
+           <time
+             datetime="2023-01-01T00:00:00.000Z"
            >
-           <button
-             class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
-             tabindex="0"
-             type="button"
-           >
-             Jetzt Bezahlen
-             <span
-               class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
-             />
-           </button>
-         </div>
+             01.01.2023 00:00
+           </time>
+         </strong>
        </div>
      </div>
    </article>
  </DocumentFragment>"
`;

exports[`SubscriptionList Container should render Default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  gap: 16px;
}

.emotion-2 {
  display: grid;
  gap: 8px;
  border-radius: 4px;
  border: 1px solid rgba(0, 0, 0, 0.12);
  overflow: hidden;
  container-type: inline-size;
}

.emotion-4 {
  max-width: 100%;
  height: auto;
  aspect-ratio: auto 0.6666666666666666;
  max-height: 80lvh;
  object-fit: contain;
}

.emotion-6 {
  display: grid;
  gap: 16px;
  padding: 16px;
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 1.25rem;
  line-height: 1.6;
  letter-spacing: 0.0075em;
}

.emotion-9 {
  list-style: none;
  margin: 0;
  padding: 0;
}

.emotion-11 {
  display: grid;
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: start;
  justify-content: start;
  gap: 8px;
}

.emotion-21 {
  margin: 0;
  font: inherit;
  color: #1976d2;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-color: rgba(25, 118, 210, 0.4);
}

.emotion-21:hover {
  text-decoration-color: inherit;
}

.emotion-22 {
  display: grid;
  gap: 16px;
}

@container (min-width: 45ch) {
  .emotion-22 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    justify-content: space-between;
  }
}

.emotion-24 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #000;
}

.emotion-24::-moz-focus-inner {
  border-style: none;
}

.emotion-24.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-24 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-24:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.04);
}

@media (hover: none) {
  .emotion-24:hover {
    background-color: transparent;
  }
}

.emotion-24.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-25 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #fff;
  background-color: #1976d2;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-26::-moz-focus-inner {
  border-style: none;
}

.emotion-26.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-26 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-26:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #1565c0;
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
}

@media (hover: none) {
  .emotion-26:hover {
    background-color: #1976d2;
  }
}

.emotion-26:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.emotion-26.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-26.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

<article
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <img
        alt="DSC07717"
        class="emotion-4 emotion-5"
        loading="lazy"
        srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
        title=""
      />
      <div
        class="emotion-6 emotion-7"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 emotion-8"
        >
          Foobar Memberplan
        </h6>
        <ul
          class="emotion-9 emotion-10"
        >
          <li
            class="emotion-11 emotion-12"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
              />
            </svg>
            <span>
              Abgeschlossen am 
              <time
                datetime="2023-01-01"
              >
                01.01.2023 00:00
              </time>
            </span>
          </li>
          <li
            class="emotion-11 emotion-12"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
              />
            </svg>
            <span>
              Bezahlt bis 
              <time
                datetime="2032-01-01"
              >
                01.01.2032 00:00
              </time>
            </span>
          </li>
          <li
            class="emotion-11 emotion-12"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8A5.87 5.87 0 016 12c0-3.31 2.69-6 6-6zm6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26z"
              />
            </svg>
             Wird automatisch vierteljährlich erneuert
          </li>
          <li
            class="emotion-11 emotion-12"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
              />
            </svg>
             Kostet CHF 2'500.- pro Monat
          </li>
          <li
            class="emotion-11 emotion-12"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
              />
            </svg>
             
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-21"
              href="https://example.com"
            >
              Details & Zahlungen
            </a>
          </li>
        </ul>
        <div
          class="emotion-22 emotion-23"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium emotion-24"
            tabindex="0"
            type="button"
          >
            Abo Kündigen
            <span
              class="MuiTouchRipple-root emotion-25"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium emotion-26"
            tabindex="0"
            type="button"
          >
            Jetzt Verlängern
            <span
              class="MuiTouchRipple-root emotion-25"
            />
          </button>
        </div>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`SubscriptionList Container should render Extend 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`SubscriptionList Container should render Pay 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`SubscriptionList Container should render Unpaid 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -73,18 +73,11 @@
                />
                <path
                  d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
                />
              </svg>
-             <span>
-               Bezahlt bis 
-               <time
-                 datetime="2032-01-01"
-               >
-                 01.01.2032 00:00
-               </time>
-             </span>
+              Abo ist unbezahlt
            </li>
            <li
              class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
            >
              <svg
@@ -173,11 +166,11 @@
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
-             Jetzt Verlängern
+             Jetzt Bezahlen
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </button>
          </div>"
`;

exports[`SubscriptionList Container should render WithClassName 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,8 +1,8 @@
  <DocumentFragment>
    <article
-     class="css-1lcio32-SubscriptionListWrapper e12e7g630"
+     class="extra-classname css-1lcio32-SubscriptionListWrapper e12e7g630"
    >
      <div
        class="css-r6owmh-SubscriptionListItemWrapper eere75z4"
      >
        <img"
`;

exports[`SubscriptionList Container should render WithEmotion 1`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;

exports[`SubscriptionList Container should render WithFilter 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,185 +3,15 @@
      class="css-1lcio32-SubscriptionListWrapper e12e7g630"
    >
      <div
        class="css-r6owmh-SubscriptionListItemWrapper eere75z4"
      >
-       <img
-         alt="DSC07717"
-         class="css-cibo30-ImageWrapper e1shv2yg0"
-         loading="lazy"
-         srcset="https://unsplash.it/800/400 800w,
- https://unsplash.it/500/300 500w,
- https://unsplash.it/300/200 300w,
- https://unsplash.it/200/100 200w"
-         title=""
-       />
        <div
          class="css-6l2m0q-SubscriptionListItemContent eere75z3"
        >
-         <h6
-           class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
-         >
-           Foobar Memberplan
-         </h6>
-         <ul
-           class="css-14qrd03-SubscriptionListItemMeta eere75z2"
-         >
-           <li
-             class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
-           >
-             <svg
-               fill="currentColor"
-               height="1em"
-               stroke="currentColor"
-               stroke-width="0"
-               viewBox="0 0 24 24"
-               width="1em"
-               xmlns="http://www.w3.org/2000/svg"
-             >
-               <path
-                 d="M0 0h24v24H0z"
-                 fill="none"
-               />
-               <path
-                 d="M19 4h-1V2h-2v2H8V2H6v2H5c-1.11 0-1.99.9-1.99 2L3 20a2 2 0 002 2h14c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 16H5V10h14v10zM9 14H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm-8 4H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2z"
-               />
-             </svg>
-             <span>
-               Abgeschlossen am 
-               <time
-                 datetime="2023-01-01"
-               >
-                 01.01.2023 00:00
-               </time>
-             </span>
-           </li>
-           <li
-             class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
-           >
-             <svg
-               fill="currentColor"
-               height="1em"
-               stroke="currentColor"
-               stroke-width="0"
-               viewBox="0 0 24 24"
-               width="1em"
-               xmlns="http://www.w3.org/2000/svg"
-             >
-               <path
-                 d="M0 0h24v24H0z"
-                 fill="none"
-               />
-               <path
-                 d="M19 14V6c0-1.1-.9-2-2-2H3c-1.1 0-2 .9-2 2v8c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2zm-2 0H3V6h14v8zm-7-7c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3zm13 0v11c0 1.1-.9 2-2 2H4v-2h17V7h2z"
-               />
-             </svg>
-             <span>
-               Bezahlt bis 
-               <time
-                 datetime="2032-01-01"
-               >
-                 01.01.2032 00:00
-               </time>
-             </span>
-           </li>
-           <li
-             class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
-           >
-             <svg
-               fill="currentColor"
-               height="1em"
-               stroke="currentColor"
-               stroke-width="0"
-               viewBox="0 0 24 24"
-               width="1em"
-               xmlns="http://www.w3.org/2000/svg"
-             >
-               <path
-                 d="M0 0h24v24H0z"
-                 fill="none"
-               />
-               <path
-                 d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8A5.87 5.87 0 016 12c0-3.31 2.69-6 6-6zm6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26z"
-               />
-             </svg>
-              Wird automatisch vierteljährlich erneuert
-           </li>
-           <li
-             class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
-           >
-             <svg
-               fill="currentColor"
-               height="1em"
-               stroke="currentColor"
-               stroke-width="0"
-               viewBox="0 0 24 24"
-               width="1em"
-               xmlns="http://www.w3.org/2000/svg"
-             >
-               <path
-                 d="M0 0h24v24H0z"
-                 fill="none"
-               />
-               <path
-                 d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
-               />
-             </svg>
-              Kostet CHF 2'500.- pro Monat
-           </li>
-           <li
-             class="css-ec7qyu-SubscriptionListItemMetaItem eere75z1"
-           >
-             <svg
-               fill="currentColor"
-               height="1em"
-               stroke="currentColor"
-               stroke-width="0"
-               viewBox="0 0 24 24"
-               width="1em"
-               xmlns="http://www.w3.org/2000/svg"
-             >
-               <path
-                 d="M0 0h24v24H0z"
-                 fill="none"
-               />
-               <path
-                 d="M13 3a9 9 0 00-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42A8.954 8.954 0 0013 21a9 9 0 000-18zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
-               />
-             </svg>
-              
-             <a
-               class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
-               href="https://example.com"
-             >
-               Details & Zahlungen
-             </a>
-           </li>
-         </ul>
-         <div
-           class="css-1fn3y2c-SubscriptionListItemActions eere75z0"
-         >
-           <button
-             class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium css-q7xvqc-MuiButtonBase-root-MuiButton-root"
-             tabindex="0"
-             type="button"
-           >
-             Abo Kündigen
-             <span
-               class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
-             />
-           </button>
-           <button
-             class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-sghohy-MuiButtonBase-root-MuiButton-root"
-             tabindex="0"
-             type="button"
-           >
-             Jetzt Verlängern
-             <span
-               class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
-             />
-           </button>
-         </div>
+         <strong>
+           Kein aktives Abo
+         </strong>
        </div>
      </div>
    </article>
  </DocumentFragment>"
`;
